alteração da footer

--- a/penz/index.html
+++ b/penz/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Penz Imóveis</title>
+        <title>Penz Imóveis - A escolha certa no litoral</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="./src/css/penz.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css" integrity="sha384-i1LQnF23gykqWXg6jxC2ZbCbUMxyw5gLZY6UiUS98LYV5unm8GWmfkIS6jqJfb4E" crossorigin="anonymous">
@@ -337,36 +337,126 @@
                 </div>
             </div>
         </div>
-        <footer class="footer_area">
-            <div class="container">
-                <div class="row single-footer-widget">
-                    <div class="col-lg-8 col-md-6 col-sm-12">
-                        <div class="copy_right_text">
-                            <p>Copyright &copy;<script>
-                                    document.write(new Date().getFullYear());
-                                </script>
-                                Penz Imóveis
-                                <br class="d-block d-md-none">
-                                | Todos os direitos reservados |
-                                <br class="d-block d-md-none">
-                                Desenvolvido por
-                                <a href="https://www.github.com/rminossi" style="color: white" target="_blank">@rminossi</a>
-                            </p>
-                        </div>
+        <!-- Footer -->
+        <footer class="footer_area mdb-color pt-4">
+
+            <!-- Footer Links -->
+            <div class="container text-center text-md-left">
+
+                <!-- Footer links -->
+                <div class="row single-footer-widget text-center text-md-left mt-3 pb-3">
+
+                    <!-- Grid column -->
+                    <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+                        <h6 class="text-uppercase mb-4 font-weight-bold">Penz Imóveis</h6>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id ad quo adipisci quos praesentium natus, hic cum quae qui eos?</p>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12">
-                        <div class="social_widget">
-                            <a href="https://facebook.com/" target="_blank">
-                                <i class="fab fa-facebook-f"></i>
-                            </a>
-                            <a href="https://instagran.com" target="_blank">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                        </div>
+                    <!-- Grid column -->
+
+                    <hr class="w-100 clearfix d-md-none">
+
+                    <!-- Grid column -->
+                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+                        <h6 class="text-uppercase mb-4 font-weight-bold">Imóveis</h6>
+                        <p>
+                            <a href="#!">Lançamentos</a>
+                        </p>
+                        <p>
+                            <a href="#!">Venda</a>
+                        </p>
+                        <p>
+                            <a href="#!">Aluguel Temporada</a>
+                        </p>
+                        <p>
+                            <a href="#!">Aluguel Anual</a>
+                        </p>
+                    </div>
+                    <!-- Grid column -->
+
+                    <hr class="w-100 clearfix d-md-none">
+
+                    <!-- Grid column -->
+                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+                        <h6 class="text-uppercase mb-4 font-weight-bold">Mais acessados</h6>
+                        <p>
+                            <a href="#!">Anuncie seu imóvel</a>
+                        </p>
+                        <p>
+                            <a href="#!">Selecionados para você</a>
+                        </p>
+                        <p>
+                            <a href="#!">Siga Torres</a>
+                        </p>
+                        <p>
+                            <a href="#!">Sobre a Penz</a>
+                        </p>
+                    </div>
+
+                    <!-- Grid column -->
+                    <hr class="w-100 clearfix d-md-none">
+
+                    <!-- Grid column -->
+                    <div class="col-md-4 col-lg-3 col-xl-4 mx-0 mt-3">
+                        <h6 class="text-uppercase mb-4 font-weight-bold">Contato</h6>
+                        <p>
+                            <i class="fas fa-home mr-1"></i>
+                            Rua José Antônio Picoral, 80 - Centro, Torres, RS
+                        </p>
+                        <p>
+                            <a href="#">
+                                <i class="fas fa-envelope mr-1"></i>
+                                penzimoveis@penzimoveis.com.br</p>
+                        </a>
+                        <p>
+                            <i class="fas fa-phone mr-1"></i>
+                            + 55 51 3626-1821</p>
+                        <p>
+                            <i class="fab fa-whatsapp mr-1"></i>
+                            + 55 51 98536-3072</p>
+                        <p>
+                            <a href="">
+                                <i class="fab fa-facebook-f mr-1"></i>
+                                facebook.com/penzimoveis</p>
+                        </a>
+                        <p>
+                            <a href="">
+                                <i class="fab fa-instagram mr-1"></i>
+                                @penzimoveis</p>
+                        </a>
+                    </div>
+                    <!-- Grid column -->
+
+                </div>
+                <!-- Footer links -->
+
+                <hr>
+
+                <!-- Grid row -->
+                <div class="row d-flex align-items-center">
+
+                    <!-- Grid column -->
+                    <div class="col-10 offset-2">
+
+                        <!--Copyright-->
+                        <p>Copyright &copy;<script>
+                                document.write(new Date().getFullYear());
+                            </script>
+                            Penz Imóveis
+                            <br class="d-block d-md-none">
+                            | Todos os direitos reservados |
+                            <br class="d-block d-md-none">
+                            Desenvolvido por
+                            <a href="https://www.github.com/rminossi" style="color: white" target="_blank">@rminossi</a>
+                        </p>
                     </div>
                 </div>
+                <!-- Grid row -->
+
             </div>
+            <!-- Footer Links -->
+
         </footer>
+        <!-- Footer -->
 
         <script>
             $('#vendasCarousel').carousel({interval: 5000})
