alteração de links e botões

--- a/penz/detalhes.html
+++ b/penz/detalhes.html
@@ -24,7 +24,7 @@
         </div>
         <nav class="navbar navbar-expand-lg navbar-dark static-top">
           <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
               <img src="./src/imgs/logo-mobile.png" class="ml-0 d-none d-md-block" width="260" height="110" alt="">
               <img src="./src/imgs/logo-mobile.png" class="ml-0 d-block d-md-none" width="174" height="74" alt="">
             </a>
@@ -61,7 +61,7 @@
               </ul>
             </div>
             <div class="nav-item active mt-5 mt-md-0 offset-md-0 offset-3">
-              <a class="nav-link animated infinite pulse delay-0s" style="#133448; color: #fff; border: #fff solid 3px;" " href=" #"=" #""="#" "">Anuncie seu imóvel
+              <a class="nav-link animated infinite pulse delay-0s" style="#133448; color: #fff; border: #fff solid 3px;" href=" anuncie-conosco.html">Anuncie seu imóvel
                 <span class="sr-only">(current)</span>
               </a>
             </div>
@@ -291,13 +291,7 @@
           </div>
           <div class="col">
             <div class="row py-3" style="background-color:#F7F6F6; height 35px;">
-              <div class="col-6">
-                <a href="financiamento/">
-                  <div class="text-center text-primary"><img src="src/imgs/iconecifrao.png" class="cifrao">
-                    Simular Financiamento</div>
-                </a>
-              </div>
-              <div class="col-6">
+              <div class="col-6 offset-3">
                 <a href="printimoveis.php?codigo=1376" target="_blank">
                   <div class="text-center text-primary"><img src="src/imgs/iconeimprimir.png" class="cifrao">
                     Imprimir Ficha</div>
@@ -308,7 +302,7 @@
 
         </div>
         <div class="col-12 col-md-6 mt-4">
-          <h5 style="color:#1F2B43; font-size: 20px; font-weight:bold">Descrição</h5>
+          <h5 style="color:#1F2B43; font-size: 20px; font-weight:bold">Tenho interesse!</h5>
           <form>
             <div class="form-row">
               <div class="form-group col-12">
