--- a/penz/index.html
+++ b/penz/index.html
@@ -24,7 +24,7 @@
                 </div>
                 <nav class="navbar navbar-expand-lg navbar-dark static-top">
                     <div class="container">
-                        <a class="navbar-brand" href="#">
+                        <a class="navbar-brand" href="index.html">
                             <img src="./src/imgs/logo-mobile.png" class="ml-0 d-none d-md-block" width="260" height="110" alt="">
                             <img src="./src/imgs/logo-mobile.png" class="ml-0 d-block d-md-none" width="174" height="74" alt="">
                         </a>
@@ -61,7 +61,7 @@
                             </ul>
                         </div>
                         <div class="nav-item active mt-5 mt-md-0 offset-md-0 offset-3">
-                            <a class="nav-link animated infinite pulse delay-0s" style="#133448; color: #fff; border: #fff solid 3px;" " href=" #"=" #""="#" "">Anuncie seu imóvel
+                            <a class="nav-link animated infinite pulse delay-0s" style="#133448; color: #fff; border: #fff solid 3px;" href=" anuncie-conosco.html">Anuncie seu imóvel
                                 <span class="sr-only">(current)</span>
                             </a>
                         </div>
@@ -218,7 +218,7 @@
                                 <div class="carousel-item active">
                                     <div class="col-md-4">
                                         <div class="card" style="width: 100%;">
-                                            <a href="detalhes/3698/">
+                                            <a href="detalhes.html">
                                                 <img class="card-img-top" src="src/imgs/casa1.jpeg" alt="Card image cap">
                                             </a>
                                             <div class="card-body">
@@ -226,8 +226,10 @@
                                                 <p class="card-text">Torres - PRAIA REAL</p>
                                                 <p class="card-text">R$ 45.000,00</p>
                                                 <div class="row botoes-card">
-                                                    <a href="detalhes/3698/" class="btn btn-primary" style="margin-right: 12%; margin-left: 12%">Ver detalhes</a>
-                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">Conversar</a>
+                                                    <a href="detalhes.html" class="btn btn-primary" style="margin-right: 12%; margin-left: 12%">Ver detalhes</a>
+                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">
+                                                        <i class="fab fa-whatsapp mr-1"></i>
+                                                        Conversar</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -236,7 +238,7 @@
                                 <div class="carousel-item">
                                     <div class="col-md-4">
                                         <div class="card" style="width: 100%;">
-                                            <a href="detalhes/3698/">
+                                            <a href="detalhes.html">
                                                 <img class="card-img-top" src="src/imgs/casa2.jpeg" alt="Card image cap">
                                             </a>
                                             <div class="card-body">
@@ -244,8 +246,10 @@
                                                 <p class="card-text">Torres - CENTRO</p>
                                                 <p class="card-text">R$ 165.000,00</p>
                                                 <div class="row botoes-card">
-                                                    <a href="detalhes/3698/" class="btn btn-primary" style="margin-right: 12%; margin-left: 12%">Ver detalhes</a>
-                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">Conversar</a>
+                                                    <a href="detalhes.html" class="btn btn-primary" style="margin-right: 12%; margin-left: 12%">Ver detalhes</a>
+                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">
+                                                        <i class="fab fa-whatsapp mr-1"></i>
+                                                        Conversar</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -254,7 +258,7 @@
                                 <div class="carousel-item">
                                     <div class="col-md-4">
                                         <div class="card" style="width: 100%;">
-                                            <a href="detalhes/3698/">
+                                            <a href="detalhes.html">
                                                 <img class="card-img-top" src="src/imgs/casa3.jpeg" alt="Card image cap">
                                             </a>
                                             <div class="card-body">
@@ -262,8 +266,10 @@
                                                 <p class="card-text">Torres - STAN</p>
                                                 <p class="card-text">R$ 180.000,00</p>
                                                 <div class="row botoes-card">
-                                                    <a href="detalhes/3698/" class="btn btn-primary" style="margin-right: 12%; margin-left: 12%">Ver detalhes</a>
-                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">Conversar</a>
+                                                    <a href="detalhes.html" class="btn btn-primary" style="margin-right: 12%; margin-left: 12%">Ver detalhes</a>
+                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">
+                                                        <i class="fab fa-whatsapp mr-1"></i>
+                                                        Conversar</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -272,7 +278,7 @@
                                 <div class="carousel-item">
                                     <div class="col-md-4">
                                         <div class="card" style="width: 100%;">
-                                            <a href="detalhes/3698/">
+                                            <a href="detalhes.html">
                                                 <img class="card-img-top" src="src/imgs/casa4.jpeg" alt="Card image cap">
                                             </a>
                                             <div class="card-body">
@@ -280,8 +286,10 @@
                                                 <p class="card-text">Torres - PRAIA GRANDE</p>
                                                 <p class="card-text">R$ 1.500.000,00</p>
                                                 <div class="row botoes-card">
-                                                    <a href="detalhes/3698/" class="btn btn-primary" style="margin-right: 12%; margin-left: 12%">Ver detalhes</a>
-                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">Conversar</a>
+                                                    <a href="detalhes.html" class="btn btn-primary" style="margin-right: 12%; margin-left: 12%">Ver detalhes</a>
+                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">
+                                                        <i class="fab fa-whatsapp mr-1"></i>
+                                                        Conversar</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -290,7 +298,7 @@
                                 <div class="carousel-item">
                                     <div class="col-md-4">
                                         <div class="card" style="width: 100%;">
-                                            <a href="detalhes/3698/">
+                                            <a href="detalhes.html">
                                                 <img class="card-img-top" src="src/imgs/casa5.jpeg" alt="Card image cap">
                                             </a>
                                             <div class="card-body">
@@ -298,8 +306,10 @@
                                                 <p class="card-text">Torres - CENTRO</p>
                                                 <p class="card-text">R$ 1.000.000,00</p>
                                                 <div class="row botoes-card">
-                                                    <a href="detalhes/3698/" class="btn btn-primary" style="margin-right: 12%; margin-left: 12%">Ver detalhes</a>
-                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">Conversar</a>
+                                                    <a href="detalhes.html" class="btn btn-primary" style="margin-right: 12%; margin-left: 12%">Ver detalhes</a>
+                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">
+                                                        <i class="fab fa-whatsapp mr-1"></i>
+                                                        Conversar</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -308,7 +318,7 @@
                                 <div class="carousel-item">
                                     <div class="col-md-4">
                                         <div class="card" style="width: 100%;">
-                                            <a href="detalhes/3698/">
+                                            <a href="detalhes.html">
                                                 <img class="card-img-top" src="src/imgs/casa6.jpeg" alt="Card image cap">
                                             </a>
                                             <div class="card-body">
@@ -316,8 +326,10 @@
                                                 <p class="card-text">Torres - GUARITA</p>
                                                 <p class="card-text">R$ 375.000,00</p>
                                                 <div class="row botoes-card">
-                                                    <a href="detalhes/3698/" class="btn btn-primary" style="margin-right: 12%; margin-left: 12%">Ver detalhes</a>
-                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">Conversar</a>
+                                                    <a href="detalhes.html" class="btn btn-primary" style="margin-right: 12%; margin-left: 12%">Ver detalhes</a>
+                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">
+                                                        <i class="fab fa-whatsapp mr-1"></i>
+                                                        Conversar</a>
                                                 </div>
                                             </div>
                                         </div>
