pagina de listagem, alteração de ícones, links e responsividade

--- a/penz/anuncie-conosco.html
+++ b/penz/anuncie-conosco.html
@@ -34,7 +34,7 @@
             <div class="row collapse navbar-collapse offset-1" id="navbarResponsive">
               <ul class="navbar-nav ml-0 w-100">
                 <li class="nav-item active mt-md-2">
-                  <a class="nav-link" href="#">
+                  <a class="nav-link" href="lista.html">
                     <div class="row">
                       <i class="fas fa-home d-none d-md-block offset-md-5"></i>
                     </div>
@@ -227,7 +227,12 @@
             </div>
           </div>
         </div>
-        <button type="submit" class="btn btn-primary">Enviar</button>
+        <div class="form-group">
+          <label for="exampleFormControlFile1">Anexar fotos</label>
+          <span style="font-size: 0.8rem; color: red">*entre 10 e 15 fotos</span>
+          <input type="file" multiple="multiple" class="form-control-file" id="exampleFormControlFile1">
+        </div>
+        <button type="submit" class="btn btn-primary offset-md-11 offset-9 mt-3">Enviar</button>
       </form>
     </div>
 
