--- a/penz/detalhes.html
+++ b/penz/detalhes.html
@@ -34,7 +34,7 @@
             <div class="row collapse navbar-collapse offset-1" id="navbarResponsive">
               <ul class="navbar-nav ml-0 w-100">
                 <li class="nav-item active mt-md-2">
-                  <a class="nav-link" href="#">
+                  <a class="nav-link" href="lista.html">
                     <div class="row">
                       <i class="fas fa-home d-none d-md-block offset-md-5"></i>
                     </div>
