--- a/penz/index.html
+++ b/penz/index.html
@@ -34,7 +34,7 @@
                         <div class="row collapse navbar-collapse offset-1" id="navbarResponsive">
                             <ul class="navbar-nav ml-0 w-100">
                                 <li class="nav-item active mt-md-2">
-                                    <a class="nav-link" href="#">
+                                    <a class="nav-link" href="lista.html">
                                         <div class="row">
                                             <i class="fas fa-home d-none d-md-block offset-md-5"></i>
                                         </div>
@@ -225,8 +225,8 @@
                                                 <h5 class="card-title">Casa 1</h5>
                                                 <p class="card-text">Torres - PRAIA REAL</p>
                                                 <p class="card-text">R$ 45.000,00</p>
-                                                <div class="row botoes-card">
-                                                    <a href="detalhes.html" class="btn btn-primary" style="margin-right: 12%; margin-left: 12%">Ver detalhes</a>
+                                                <div class="row botoes-card ml-2 ml-md-3 ml-2 ml-md-3">
+                                                    <a href="detalhes.html" class="btn btn-primary mr-3" style="">Ver detalhes</a>
                                                     <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">
                                                         <i class="fab fa-whatsapp mr-1"></i>
                                                         Conversar</a>
@@ -245,8 +245,8 @@
                                                 <h5 class="card-title">Terreno 1</h5>
                                                 <p class="card-text">Torres - CENTRO</p>
                                                 <p class="card-text">R$ 165.000,00</p>
-                                                <div class="row botoes-card">
-                                                    <a href="detalhes.html" class="btn btn-primary" style="margin-right: 12%; margin-left: 12%">Ver detalhes</a>
+                                                <div class="row botoes-card ml-2 ml-md-3 ml-2 ml-md-3">
+                                                    <a href="detalhes.html" class="btn btn-primary mr-3" style="">Ver detalhes</a>
                                                     <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">
                                                         <i class="fab fa-whatsapp mr-1"></i>
                                                         Conversar</a>
@@ -265,8 +265,8 @@
                                                 <h5 class="card-title">Apartamento</h5>
                                                 <p class="card-text">Torres - STAN</p>
                                                 <p class="card-text">R$ 180.000,00</p>
-                                                <div class="row botoes-card">
-                                                    <a href="detalhes.html" class="btn btn-primary" style="margin-right: 12%; margin-left: 12%">Ver detalhes</a>
+                                                <div class="row botoes-card ml-2 ml-md-3 ml-2 ml-md-3">
+                                                    <a href="detalhes.html" class="btn btn-primary mr-3" style="">Ver detalhes</a>
                                                     <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">
                                                         <i class="fab fa-whatsapp mr-1"></i>
                                                         Conversar</a>
@@ -285,8 +285,8 @@
                                                 <h5 class="card-title">Casa 2</h5>
                                                 <p class="card-text">Torres - PRAIA GRANDE</p>
                                                 <p class="card-text">R$ 1.500.000,00</p>
-                                                <div class="row botoes-card">
-                                                    <a href="detalhes.html" class="btn btn-primary" style="margin-right: 12%; margin-left: 12%">Ver detalhes</a>
+                                                <div class="row botoes-card ml-2 ml-md-3 ml-2 ml-md-3">
+                                                    <a href="detalhes.html" class="btn btn-primary mr-3" style="">Ver detalhes</a>
                                                     <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">
                                                         <i class="fab fa-whatsapp mr-1"></i>
                                                         Conversar</a>
@@ -305,8 +305,8 @@
                                                 <h5 class="card-title">Terreno 5</h5>
                                                 <p class="card-text">Torres - CENTRO</p>
                                                 <p class="card-text">R$ 1.000.000,00</p>
-                                                <div class="row botoes-card">
-                                                    <a href="detalhes.html" class="btn btn-primary" style="margin-right: 12%; margin-left: 12%">Ver detalhes</a>
+                                                <div class="row botoes-card ml-2 ml-md-3 ml-2 ml-md-3">
+                                                    <a href="detalhes.html" class="btn btn-primary mr-3" style="">Ver detalhes</a>
                                                     <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">
                                                         <i class="fab fa-whatsapp mr-1"></i>
                                                         Conversar</a>
@@ -325,8 +325,8 @@
                                                 <h5 class="card-title">Casa 7</h5>
                                                 <p class="card-text">Torres - GUARITA</p>
                                                 <p class="card-text">R$ 375.000,00</p>
-                                                <div class="row botoes-card">
-                                                    <a href="detalhes.html" class="btn btn-primary" style="margin-right: 12%; margin-left: 12%">Ver detalhes</a>
+                                                <div class="row botoes-card ml-2 ml-md-3 ml-2 ml-md-3">
+                                                    <a href="detalhes.html" class="btn btn-primary mr-3" style="">Ver detalhes</a>
                                                     <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">
                                                         <i class="fab fa-whatsapp mr-1"></i>
                                                         Conversar</a>
