--- a/penz/index.html
+++ b/penz/index.html
@@ -211,7 +211,7 @@
                     <h3 class="col-10 col-md-10 pl-0" style="color: #17284e; font-weight: bold">Destaques</h3>
                 </div>
                 <hr class="mt-0">
-                <div class="container text-center my-3">
+                <div class="text-center my-3">
                     <div class="row mx-auto my-auto">
                         <div id="vendasCarousel" class="carousel imoveisCarousel slide w-100" data-ride="carousel">
                             <div class="carousel-inner vendasCarousel-inner w-100" role="listbox">
