--- a/penz/index.html
+++ b/penz/index.html
@@ -218,121 +218,199 @@
                                 <div class="carousel-item active">
                                     <div class="col-md-4">
                                         <div class="card" style="width: 100%;">
-                                            <a href="detalhes.html">
-                                                <img class="card-img-top" src="src/imgs/casa1.jpeg" alt="Card image cap">
-                                            </a>
-                                            <div class="card-body">
-                                                <h5 class="card-title">Casa 1</h5>
-                                                <p class="card-text">Torres - PRAIA REAL</p>
-                                                <p class="card-text">R$ 45.000,00</p>
-                                                <div class="row botoes-card ml-2 ml-md-3 ml-2 ml-md-3">
-                                                    <a href="detalhes.html" class="btn btn-primary mr-3" style="">Ver detalhes</a>
-                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">
-                                                        <i class="fab fa-whatsapp mr-1"></i>
-                                                        Conversar</a>
-                                                </div>
-                                            </div>
-                                        </div>
+                <a href="detalhes.html">
+                  <div style="position: relative; display: inline-block">
+                    <img class="card-img-top" src="src/imgs/casa1.jpeg" alt="Card image cap">
+                    <div class="preco" style="position: absolute; top: 180px; right: 20px; color: white; background-color: #1f2b43; padding: 15px 15px 0 15px; border-radius: .5rem; border: white solid 3px">
+                      <p>R$ 45.000,00</p>
+                    </div>
+                  </div>
+                </a>
+                <div class="card-body">
+                  <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
+                  <p class="card-text">Torres - Centro</p>
+                  <p class="card-text offset-md-1">
+                    <i class="fas fa-ruler"></i>
+                    68m² |
+                    <i class="fas fa-bed"></i>
+                    3 quartos |
+                    <i class="fas fa-car"></i>
+                    3 vagas</p>
+
+                  <div class="row botoes-card offset-1
+">
+                    <a href="detalhes.html" class="btn btn-primary mr-3" style="">Ver detalhes</a>
+                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">
+                      <i class="fab fa-whatsapp mr-1"></i>
+                      Conversar</a>
+                  </div>
+                </div>
+              </div>
                                     </div>
                                 </div>
                                 <div class="carousel-item">
                                     <div class="col-md-4">
                                         <div class="card" style="width: 100%;">
-                                            <a href="detalhes.html">
-                                                <img class="card-img-top" src="src/imgs/casa2.jpeg" alt="Card image cap">
-                                            </a>
-                                            <div class="card-body">
-                                                <h5 class="card-title">Terreno 1</h5>
-                                                <p class="card-text">Torres - CENTRO</p>
-                                                <p class="card-text">R$ 165.000,00</p>
-                                                <div class="row botoes-card ml-2 ml-md-3 ml-2 ml-md-3">
-                                                    <a href="detalhes.html" class="btn btn-primary mr-3" style="">Ver detalhes</a>
-                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">
-                                                        <i class="fab fa-whatsapp mr-1"></i>
-                                                        Conversar</a>
-                                                </div>
-                                            </div>
-                                        </div>
+                <a href="detalhes.html">
+                  <div style="position: relative; display: inline-block">
+                    <img class="card-img-top" src="src/imgs/casa1.jpeg" alt="Card image cap">
+                    <div class="preco" style="position: absolute; top: 180px; right: 20px; color: white; background-color: #1f2b43; padding: 15px 15px 0 15px; border-radius: .5rem; border: white solid 3px">
+                      <p>R$ 45.000,00</p>
+                    </div>
+                  </div>
+                </a>
+                <div class="card-body">
+                  <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
+                  <p class="card-text">Torres - Centro</p>
+                  <p class="card-text offset-md-1">
+                    <i class="fas fa-ruler"></i>
+                    68m² |
+                    <i class="fas fa-bed"></i>
+                    3 quartos |
+                    <i class="fas fa-car"></i>
+                    3 vagas</p>
+
+                  <div class="row botoes-card offset-1
+">
+                    <a href="detalhes.html" class="btn btn-primary mr-3" style="">Ver detalhes</a>
+                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">
+                      <i class="fab fa-whatsapp mr-1"></i>
+                      Conversar</a>
+                  </div>
+                </div>
+              </div>
                                     </div>
                                 </div>
                                 <div class="carousel-item">
                                     <div class="col-md-4">
                                         <div class="card" style="width: 100%;">
-                                            <a href="detalhes.html">
-                                                <img class="card-img-top" src="src/imgs/casa3.jpeg" alt="Card image cap">
-                                            </a>
-                                            <div class="card-body">
-                                                <h5 class="card-title">Apartamento</h5>
-                                                <p class="card-text">Torres - STAN</p>
-                                                <p class="card-text">R$ 180.000,00</p>
-                                                <div class="row botoes-card ml-2 ml-md-3 ml-2 ml-md-3">
-                                                    <a href="detalhes.html" class="btn btn-primary mr-3" style="">Ver detalhes</a>
-                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">
-                                                        <i class="fab fa-whatsapp mr-1"></i>
-                                                        Conversar</a>
-                                                </div>
-                                            </div>
-                                        </div>
+                <a href="detalhes.html">
+                  <div style="position: relative; display: inline-block">
+                    <img class="card-img-top" src="src/imgs/casa1.jpeg" alt="Card image cap">
+                    <div class="preco" style="position: absolute; top: 180px; right: 20px; color: white; background-color: #1f2b43; padding: 15px 15px 0 15px; border-radius: .5rem; border: white solid 3px">
+                      <p>R$ 45.000,00</p>
+                    </div>
+                  </div>
+                </a>
+                <div class="card-body">
+                  <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
+                  <p class="card-text">Torres - Centro</p>
+                  <p class="card-text offset-md-1">
+                    <i class="fas fa-ruler"></i>
+                    68m² |
+                    <i class="fas fa-bed"></i>
+                    3 quartos |
+                    <i class="fas fa-car"></i>
+                    3 vagas</p>
+
+                  <div class="row botoes-card offset-1
+">
+                    <a href="detalhes.html" class="btn btn-primary mr-3" style="">Ver detalhes</a>
+                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">
+                      <i class="fab fa-whatsapp mr-1"></i>
+                      Conversar</a>
+                  </div>
+                </div>
+              </div>
                                     </div>
                                 </div>
                                 <div class="carousel-item">
                                     <div class="col-md-4">
                                         <div class="card" style="width: 100%;">
-                                            <a href="detalhes.html">
-                                                <img class="card-img-top" src="src/imgs/casa4.jpeg" alt="Card image cap">
-                                            </a>
-                                            <div class="card-body">
-                                                <h5 class="card-title">Casa 2</h5>
-                                                <p class="card-text">Torres - PRAIA GRANDE</p>
-                                                <p class="card-text">R$ 1.500.000,00</p>
-                                                <div class="row botoes-card ml-2 ml-md-3 ml-2 ml-md-3">
-                                                    <a href="detalhes.html" class="btn btn-primary mr-3" style="">Ver detalhes</a>
-                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">
-                                                        <i class="fab fa-whatsapp mr-1"></i>
-                                                        Conversar</a>
-                                                </div>
-                                            </div>
-                                        </div>
+                <a href="detalhes.html">
+                  <div style="position: relative; display: inline-block">
+                    <img class="card-img-top" src="src/imgs/casa1.jpeg" alt="Card image cap">
+                    <div class="preco" style="position: absolute; top: 180px; right: 20px; color: white; background-color: #1f2b43; padding: 15px 15px 0 15px; border-radius: .5rem; border: white solid 3px">
+                      <p>R$ 45.000,00</p>
+                    </div>
+                  </div>
+                </a>
+                <div class="card-body">
+                  <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
+                  <p class="card-text">Torres - Centro</p>
+                  <p class="card-text offset-md-1">
+                    <i class="fas fa-ruler"></i>
+                    68m² |
+                    <i class="fas fa-bed"></i>
+                    3 quartos |
+                    <i class="fas fa-car"></i>
+                    3 vagas</p>
+
+                  <div class="row botoes-card offset-1
+">
+                    <a href="detalhes.html" class="btn btn-primary mr-3" style="">Ver detalhes</a>
+                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">
+                      <i class="fab fa-whatsapp mr-1"></i>
+                      Conversar</a>
+                  </div>
+                </div>
+              </div>
                                     </div>
                                 </div>
                                 <div class="carousel-item">
                                     <div class="col-md-4">
                                         <div class="card" style="width: 100%;">
-                                            <a href="detalhes.html">
-                                                <img class="card-img-top" src="src/imgs/casa5.jpeg" alt="Card image cap">
-                                            </a>
-                                            <div class="card-body">
-                                                <h5 class="card-title">Terreno 5</h5>
-                                                <p class="card-text">Torres - CENTRO</p>
-                                                <p class="card-text">R$ 1.000.000,00</p>
-                                                <div class="row botoes-card ml-2 ml-md-3 ml-2 ml-md-3">
-                                                    <a href="detalhes.html" class="btn btn-primary mr-3" style="">Ver detalhes</a>
-                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">
-                                                        <i class="fab fa-whatsapp mr-1"></i>
-                                                        Conversar</a>
-                                                </div>
-                                            </div>
-                                        </div>
+                <a href="detalhes.html">
+                  <div style="position: relative; display: inline-block">
+                    <img class="card-img-top" src="src/imgs/casa1.jpeg" alt="Card image cap">
+                    <div class="preco" style="position: absolute; top: 180px; right: 20px; color: white; background-color: #1f2b43; padding: 15px 15px 0 15px; border-radius: .5rem; border: white solid 3px">
+                      <p>R$ 45.000,00</p>
+                    </div>
+                  </div>
+                </a>
+                <div class="card-body">
+                  <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
+                  <p class="card-text">Torres - Centro</p>
+                  <p class="card-text offset-md-1">
+                    <i class="fas fa-ruler"></i>
+                    68m² |
+                    <i class="fas fa-bed"></i>
+                    3 quartos |
+                    <i class="fas fa-car"></i>
+                    3 vagas</p>
+
+                  <div class="row botoes-card offset-1
+">
+                    <a href="detalhes.html" class="btn btn-primary mr-3" style="">Ver detalhes</a>
+                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">
+                      <i class="fab fa-whatsapp mr-1"></i>
+                      Conversar</a>
+                  </div>
+                </div>
+              </div>
                                     </div>
                                 </div>
                                 <div class="carousel-item">
                                     <div class="col-md-4">
                                         <div class="card" style="width: 100%;">
-                                            <a href="detalhes.html">
-                                                <img class="card-img-top" src="src/imgs/casa6.jpeg" alt="Card image cap">
-                                            </a>
-                                            <div class="card-body">
-                                                <h5 class="card-title">Casa 7</h5>
-                                                <p class="card-text">Torres - GUARITA</p>
-                                                <p class="card-text">R$ 375.000,00</p>
-                                                <div class="row botoes-card ml-2 ml-md-3 ml-2 ml-md-3">
-                                                    <a href="detalhes.html" class="btn btn-primary mr-3" style="">Ver detalhes</a>
-                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">
-                                                        <i class="fab fa-whatsapp mr-1"></i>
-                                                        Conversar</a>
-                                                </div>
-                                            </div>
-                                        </div>
+                <a href="detalhes.html">
+                  <div style="position: relative; display: inline-block">
+                    <img class="card-img-top" src="src/imgs/casa1.jpeg" alt="Card image cap">
+                    <div class="preco" style="position: absolute; top: 180px; right: 20px; color: white; background-color: #1f2b43; padding: 15px 15px 0 15px; border-radius: .5rem; border: white solid 3px">
+                      <p>R$ 45.000,00</p>
+                    </div>
+                  </div>
+                </a>
+                <div class="card-body">
+                  <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
+                  <p class="card-text">Torres - Centro</p>
+                  <p class="card-text offset-md-1">
+                    <i class="fas fa-ruler"></i>
+                    68m² |
+                    <i class="fas fa-bed"></i>
+                    3 quartos |
+                    <i class="fas fa-car"></i>
+                    3 vagas</p>
+
+                  <div class="row botoes-card offset-1
+">
+                    <a href="detalhes.html" class="btn btn-primary mr-3" style="">Ver detalhes</a>
+                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">
+                      <i class="fab fa-whatsapp mr-1"></i>
+                      Conversar</a>
+                  </div>
+                </div>
+              </div>
                                     </div>
                                 </div>
                             </div>
