--- a/penz/lista.html
+++ b/penz/lista.html
@@ -202,7 +202,7 @@
                 </a>
                 <div class="card-body">
                   <h5 class="card-title" style="font-weight: bold">Apartamento 1 dormitório no Mar del Plata</h5>
-                  <p class="card-text">Torres - Centro</p>
+                  <h6>Torres - Centro</h6>
                   <p class="card-text offset-list">
                     <i class="fas fa-ruler"></i>
                     68m² |
