--- a/penz/lista.html
+++ b/penz/lista.html
@@ -89,7 +89,7 @@
     <div class="container formulario">
       <h3>Nossos Imóveis</h3>
       <div class="row">
-        <div class="col-12 col-md-3">
+        <div class="d-none d-md-block col-md-3">
           <div class="card">
             <article class="card-group-item">
               <header class="card-header">
@@ -183,6 +183,48 @@
                       <label class="custom-control-label" for="Check2">Churrasqueira</label>
                     </div>
                   </div>
+                  <button type="submit" class="btn btn-primary w-100 mt-3">Filtrar</button>
+                </div>
+              </div>
+            </article>
+          </div>
+        </div>
+        <div class="d-md-none d-block col-md-3">
+          <div class="card">
+            <article class="card-group-item">
+              <header class="card-header">
+                <h6 class="title">Refinar busca
+                </h6>
+              </header>
+              <div class="filter-content">
+                <div class="card-body">
+                  <div class="filter-content">
+                    <div class="form-group px-0 col-md-12">
+                      <select id="inputState" class="form-control">
+                        <option selected="selected">Finalidade</option>
+                        <option>...</option>
+                      </select>
+                    </div>
+                    <div class="form-group px-0 col-md-12">
+                      <select id="inputState" class="form-control">
+                        <option selected="selected">Tipo de imóvel</option>
+                        <option>...</option>
+                      </select>
+                    </div>
+                    <div class="form-group px-0 col-md-12">
+                      <select id="inputState" class="form-control">
+                        <option selected="selected">Estado</option>
+                        <option>...</option>
+                      </select>
+                    </div>
+                    <div class="form-group px-0 col-md-12">
+                      <select id="inputState" class="form-control">
+                        <option selected="selected">Cidade</option>
+                        <option>...</option>
+                      </select>
+                    </div>
+                  </div>
+                  <button type="submit" class="btn btn-primary w-100">Filtrar</button>
                 </div>
               </div>
             </article>
