--- a/penz/lista.html
+++ b/penz/lista.html
@@ -17,8 +17,8 @@
     <script src="src/js/penz.js"></script>
   </head>
   <body>
-    <div class="topo" style="height: 200px">
-      <div class="transp" style="background-color: #0e1a2194;height: 200px;width: 100%">
+    <div class="topo" style="height: 250px">
+      <div class="transp" style="background-color: #0e1a2194;height: 250px;width: 100%">
         <div class="offset-8 d-none d-md-block  mt-3  row">
           <h5 style="color: rgba(255, 255, 255, 0.568); ">Contato: (51) 3333-3333 / (51) 99999-9999</h5>
         </div>
@@ -44,7 +44,7 @@
                   </a>
                 </li>
                 <li class="nav-item active mt-md-2">
-                  <a class="nav-link" href="#">
+                  <a class="nav-link" href="lista.html">
                     <div class="row">
                       <i class="fas fa-star d-none d-md-block offset-md-5"></i>
                     </div>
@@ -61,7 +61,7 @@
               </ul>
             </div>
             <div class="nav-item active mt-5 mt-md-0 offset-md-0 offset-3">
-              <a class="nav-link animated infinite pulse delay-0s" style="#133448; color: #fff; border: #fff solid 3px;" " href=" #"=" #""="#" "">Anuncie seu imóvel
+              <a class="nav-link animated infinite pulse delay-0s" style="#133448; color: #fff; border: #fff solid 3px;" " href=" anuncie-conosco.html"="anuncie-conosco.html"">Anuncie seu imóvel
                 <span class="sr-only">(current)</span>
               </a>
             </div>
@@ -69,7 +69,7 @@
         </nav>
       </div>
       <div class="video-container">
-        <img class="d-block" width="100%" src="src/imgs/torres.jpg" alt="" srcset="">
+        <img class="d-block" width="100%" height="250px" src="src/imgs/torres.jpg" alt="" srcset="">
       </div>
     </div>
     <div class="container">
