--- a/penz/anuncie-conosco.html
+++ b/penz/anuncie-conosco.html
@@ -61,7 +61,7 @@
               </ul>
             </div>
             <div class="nav-item active mt-5 mt-md-0 offset-md-0 offset-3">
-              <a class="nav-link animated infinite pulse delay-0s" style="#133448; color: #fff; border: #fff solid 3px;" " href=" anuncie-conosco.html"=" anuncie-conosco.html""="anuncie-conosco.html""">Anuncie seu imóvel
+              <a class="nav-link animated infinite pulse delay-0s" style="#133448; color: #fff; border: #fff solid 3px;" " href=" anuncie-conosco.html"=" anuncie-conosco.html""="anuncie-conosco.html" "">Anuncie seu imóvel
                 <span class="sr-only">(current)</span>
               </a>
             </div>
@@ -243,19 +243,19 @@
       <div class="container text-center text-md-left">
 
         <!-- Footer links -->
-        <div class="row single-footer-widget text-center text-md-left mt-3 pb-0">
+        <div class="row single-footer-widget text-center text-md-left mt-md-3 pb-0">
 
           <!-- Grid column -->
-          <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+          <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-md-3 d-none d-md-block">
             <h6 class="text-uppercase mb-4 font-weight-bold">Penz Imóveis</h6>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id ad quo adipisci quos praesentium natus, hic cum quae qui eos?</p>
           </div>
           <!-- Grid column -->
 
-          <hr class="w-100 clearfix d-md-none">
+          <hr class="w-100 clearfix d-none">
 
           <!-- Grid column -->
-          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 d-none d-md-block">
             <h6 class="text-uppercase mb-4 font-weight-bold">Imóveis</h6>
             <p>
               <a href="#!">Lançamentos</a>
@@ -272,10 +272,10 @@
           </div>
           <!-- Grid column -->
 
-          <hr class="w-100 clearfix d-md-none">
+          <hr class="w-100 clearfix d-none">
 
           <!-- Grid column -->
-          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3 d-none d-md-block">
             <h6 class="text-uppercase mb-4 font-weight-bold">Mais acessados</h6>
             <p>
               <a href="#!">Anuncie seu imóvel</a>
@@ -292,7 +292,7 @@
           </div>
 
           <!-- Grid column -->
-          <hr class="w-100 clearfix d-md-none">
+          <hr class="w-100 clearfix d-none">
 
           <!-- Grid column -->
           <div class="col-md-4 col-lg-3 col-xl-4 mx-0 mt-3">
@@ -334,7 +334,7 @@
         <div class="row d-flex align-items-center">
 
           <!-- Grid column -->
-          <div class="col-10 offset-2">
+          <div class="col-10 offset-md-2 offset-1">
 
             <!--Copyright-->
             <p>Copyright &copy;<script>
