--- a/penz/index.html
+++ b/penz/index.html
@@ -417,25 +417,25 @@
         </div>
 
         <!-- Footer -->
-        <footer class="footer_area mdb-color pt-4">
+        <footer class="footer_area mdb-color pt-1 mt-5">
 
             <!-- Footer Links -->
             <div class="container text-center text-md-left">
 
                 <!-- Footer links -->
-                <div class="row single-footer-widget text-center text-md-left mt-3 pb-3">
+                <div class="row single-footer-widget text-center text-md-left mt-md-3 pb-0">
 
                     <!-- Grid column -->
-                    <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+                    <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-md-3 d-none d-md-block">
                         <h6 class="text-uppercase mb-4 font-weight-bold">Penz Imóveis</h6>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id ad quo adipisci quos praesentium natus, hic cum quae qui eos?</p>
                     </div>
                     <!-- Grid column -->
 
-                    <hr class="w-100 clearfix d-md-none">
+                    <hr class="w-100 clearfix d-none">
 
                     <!-- Grid column -->
-                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 d-none d-md-block">
                         <h6 class="text-uppercase mb-4 font-weight-bold">Imóveis</h6>
                         <p>
                             <a href="#!">Lançamentos</a>
@@ -452,10 +452,10 @@
                     </div>
                     <!-- Grid column -->
 
-                    <hr class="w-100 clearfix d-md-none">
+                    <hr class="w-100 clearfix d-none">
 
                     <!-- Grid column -->
-                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3 d-none d-md-block">
                         <h6 class="text-uppercase mb-4 font-weight-bold">Mais acessados</h6>
                         <p>
                             <a href="#!">Anuncie seu imóvel</a>
@@ -472,7 +472,7 @@
                     </div>
 
                     <!-- Grid column -->
-                    <hr class="w-100 clearfix d-md-none">
+                    <hr class="w-100 clearfix d-none">
 
                     <!-- Grid column -->
                     <div class="col-md-4 col-lg-3 col-xl-4 mx-0 mt-3">
@@ -514,7 +514,7 @@
                 <div class="row d-flex align-items-center">
 
                     <!-- Grid column -->
-                    <div class="col-10 offset-2">
+                    <div class="col-10 offset-md-2 offset-1">
 
                         <!--Copyright-->
                         <p>Copyright &copy;<script>
