--- a/penz/detalhes.html
+++ b/penz/detalhes.html
@@ -127,7 +127,7 @@
                 <div class="carousel-item" data-slide-number="7">
                   <img src="src/imgs/detalhes_10.jpeg" class="img-fluid">
                 </div>
-                <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+                <a class="carousel-control-prev mr-5" href="#myCarousel" role="button" data-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="sr-only">Previous</span>
                 </a>
@@ -145,7 +145,7 @@
                     <div class="carousel-inner vendasCarousel-inner w-100" role="listbox">
                       <div class="carousel-item active">
                         <div class="col-12">
-                          <ul class="carousel-indicators list-inline mx-auto border px-2">
+                          <ul class="carousel-indicators list-inline mx-auto ">
                             <li class="list-inline-item active">
                               <a id="carousel-selector-0" class="selected" data-slide-to="0" data-target="#myCarousel">
                                 <img src="src/imgs/capa_detalhes.jpeg" class="img-fluid">
@@ -171,7 +171,7 @@
                       </div>
                       <div class="carousel-item">
                         <div class="col-12">
-                          <ul class="carousel-indicators list-inline mx-auto border px-2">
+                          <ul class="carousel-indicators list-inline mx-auto">
                             <li class="list-inline-item">
                               <a id="carousel-selector-4" data-slide-to="4" data-target="#myCarousel">
                                 <img src="src/imgs/detalhes_4.jpeg" class="img-fluid">
@@ -197,7 +197,7 @@
                       </div>
                       <div class="carousel-item">
                         <div class="col-12">
-                          <ul class="carousel-indicators list-inline mx-auto border px-2">
+                          <ul class="carousel-indicators list-inline mx-auto">
                             <li class="list-inline-item">
                               <a id="carousel-selector-8" data-slide-to="8" data-target="#myCarousel">
                                 <img src="src/imgs/detalhes_8.jpeg" class="img-fluid">
@@ -222,11 +222,11 @@
                         </div>
                       </div>
                     </div>
-                    <a class="carousel-control-prev w-auto" href="#vendasCarousel" role="button" data-slide="prev">
+                    <a class="carousel-control-prev w-auto pr-5 mr-5" href="#vendasCarousel" role="button" data-slide="prev">
                       <span class="carousel-control-prev-icon bg-dark border border-dark rounded-circle" aria-hidden="true"></span>
                       <span class="sr-only">Previous</span>
                     </a>
-                    <a class="carousel-control-next w-auto" href="#vendasCarousel" role="button" data-slide="next">
+                    <a class="carousel-control-next w-auto ml-5" href="#vendasCarousel" role="button" data-slide="next">
                       <span class="carousel-control-next-icon bg-dark border border-dark rounded-circle" aria-hidden="true"></span>
                       <span class="sr-only">Next</span>
                     </a>
