--- a/penz/index.html
+++ b/penz/index.html
@@ -164,7 +164,7 @@
                         <li data-target="#destaquesCarousel" data-slide-to="1"></li>
                         <li data-target="#destaquesCarousel" data-slide-to="2"></li>
                     </ol>
-                    <div class="carousel-inner row pl-2">
+                    <div class="carousel-inner row pl-2" style="height:200px">
                         <div class="carousel-item active">
                             <img class="d-block w-100 h-100" src="src/imgs/bell.jpeg" alt="First slide">
                             <div class="carousel-caption d-none d-md-block">
@@ -236,10 +236,10 @@
                                                     3 quartos |
                                                     <i class="fas fa-car"></i>
                                                     3 vagas</p>
-                                                <div class="row botoes-card offset-1">
-                                                    <a href="detalhes.html" class="btn btn-primary mr-3" style="">Ver detalhes</a>
-                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">
-                                                        <i class="fab fa-whatsapp mr-1"></i>
+                                                <div class="row botoes-card offset-list">
+                                                    <a href="detalhes.html" class="btn btn-primary mr-3 col-5" style="">Ver detalhes</a>
+                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-5">
+                                                        <i class="fab fa-whatsapp mr-0"></i>
                                                         Conversar</a>
                                                 </div>
                                             </div>
@@ -267,10 +267,10 @@
                                                     3 quartos |
                                                     <i class="fas fa-car"></i>
                                                     3 vagas</p>
-                                                <div class="row botoes-card offset-1">
-                                                    <a href="detalhes.html" class="btn btn-primary mr-3" style="">Ver detalhes</a>
-                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">
-                                                        <i class="fab fa-whatsapp mr-1"></i>
+                                                <div class="row botoes-card offset-list">
+                                                    <a href="detalhes.html" class="btn btn-primary mr-3 col-5" style="">Ver detalhes</a>
+                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-5">
+                                                        <i class="fab fa-whatsapp mr-0"></i>
                                                         Conversar</a>
                                                 </div>
                                             </div>
@@ -298,10 +298,10 @@
                                                     3 quartos |
                                                     <i class="fas fa-car"></i>
                                                     3 vagas</p>
-                                                <div class="row botoes-card offset-1">
-                                                    <a href="detalhes.html" class="btn btn-primary mr-3" style="">Ver detalhes</a>
-                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">
-                                                        <i class="fab fa-whatsapp mr-1"></i>
+                                                <div class="row botoes-card offset-list">
+                                                    <a href="detalhes.html" class="btn btn-primary mr-3 col-5" style="">Ver detalhes</a>
+                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-5">
+                                                        <i class="fab fa-whatsapp mr-0"></i>
                                                         Conversar</a>
                                                 </div>
                                             </div>
@@ -329,10 +329,10 @@
                                                     3 quartos |
                                                     <i class="fas fa-car"></i>
                                                     3 vagas</p>
-                                                <div class="row botoes-card offset-1">
-                                                    <a href="detalhes.html" class="btn btn-primary mr-3" style="">Ver detalhes</a>
-                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">
-                                                        <i class="fab fa-whatsapp mr-1"></i>
+                                                <div class="row botoes-card offset-list">
+                                                    <a href="detalhes.html" class="btn btn-primary mr-3 col-5" style="">Ver detalhes</a>
+                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-5">
+                                                        <i class="fab fa-whatsapp mr-0"></i>
                                                         Conversar</a>
                                                 </div>
                                             </div>
@@ -360,10 +360,10 @@
                                                     3 quartos |
                                                     <i class="fas fa-car"></i>
                                                     3 vagas</p>
-                                                <div class="row botoes-card offset-1">
-                                                    <a href="detalhes.html" class="btn btn-primary mr-3" style="">Ver detalhes</a>
-                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">
-                                                        <i class="fab fa-whatsapp mr-1"></i>
+                                                <div class="row botoes-card offset-list">
+                                                    <a href="detalhes.html" class="btn btn-primary mr-3 col-5" style="">Ver detalhes</a>
+                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-5">
+                                                        <i class="fab fa-whatsapp mr-0"></i>
                                                         Conversar</a>
                                                 </div>
                                             </div>
@@ -391,10 +391,10 @@
                                                     3 quartos |
                                                     <i class="fas fa-car"></i>
                                                     3 vagas</p>
-                                                <div class="row botoes-card offset-1">
-                                                    <a href="detalhes.html" class="btn btn-primary mr-3" style="">Ver detalhes</a>
-                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success">
-                                                        <i class="fab fa-whatsapp mr-1"></i>
+                                                <div class="row botoes-card offset-list">
+                                                    <a href="detalhes.html" class="btn btn-primary mr-3 col-5" style="">Ver detalhes</a>
+                                                    <a href="https://api.whatsapp.com/send?phone=5551985363072&text=Ol%C3%A1%2C%20estou%20navegando%20em%20seu%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es." class="btn btn btn-success col-5">
+                                                        <i class="fab fa-whatsapp mr-0"></i>
                                                         Conversar</a>
                                                 </div>
                                             </div>
